tests/baselines/reference/parserInterfaceDeclaration8.errors.txt
parserInterfaceDeclaration8.ts(1,11): error TS2427: Interface name cannot be 'string'.


==== parserInterfaceDeclaration8.ts (1 errors) ====
    interface string {
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'.
    }